--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   cache:
-    image: redis:6.2-alpine
+    image: redis:latest
     restart: always
     ports:
       - '6379:6379'
